<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:orientation="vertical" >

			<TextView
                android:id="@+id/TextView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9955"
                android:text="@string/stats"
                android:textAppearance="?android:attr/textAppearanceMedium" />

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <TextView
			        android:id="@+id/textView5r"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/version" />

			    <TextView
			        android:id="@+id/versionnumber"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="" />
			</LinearLayout>
			

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <TextView
			        android:id="@+id/textView5d"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/firstactivation" />

			    <TextView
			        android:id="@+id/firstactive"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="" />
			</LinearLayout>
			

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <TextView
			        android:id="@+id/textView5"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/runtime" />

			    <TextView
			        android:id="@+id/runtime"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="" />
			</LinearLayout>
			

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <TextView
			        android:id="@+id/textView5alerts"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/alerts" />

			    <TextView
			        android:id="@+id/alerts"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="" />
			</LinearLayout>
			

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <TextView
			        android:id="@+id/textView5timelast"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/timesincelast" />

			    <TextView
			        android:id="@+id/tsl"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <TextView
			        android:id="@+id/textView5thismonth"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/thismonth" />

			    <TextView
			        android:id="@+id/notext"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <TextView
			        android:id="@+id/textView5runtime"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/runtime" />

			    <TextView
			        android:id="@+id/monthruntime"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <TextView
			        android:id="@+id/textView5alertsx"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/alerts" />

			    <TextView
			        android:id="@+id/monthalerts"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="" />
			</LinearLayout>
            
			<TextView
                android:id="@+id/TextView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9955"
                android:text="@string/settings"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
			<CheckBox
                android:id="@+id/onlywificheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onlyuploadinwifitext" 
                android:textColor="@android:color/black"/>

	
            <TextView
                android:id="@+id/TextView02google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9955"
                android:text="@string/google"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/googleusername" />



            <EditText
                android:id="@+id/gmailacc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"  />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/googlepass"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/gmailpsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

           
            
            <TextView
                android:id="@+id/TextView01tumblr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9955"
                android:text="@string/tumblr"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/tumblrBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendpicstotumblr" 
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tumblrmail"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/learnmore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0000FF" 
                    android:text="@string/learnmore" />

            </LinearLayout>
            
            <TextView
                android:id="@+id/tumblrwarn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#FF0000"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >


                <EditText
                    android:id="@+id/tumblrmail"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.10"
                    android:ems="10" >

                </EditText>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attumbrcom"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9955"
                android:text="@string/twitter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/twitterChackBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendpicstotwitter" 
                android:textColor="@android:color/black"/>
		   
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9955"
                android:text="@string/sendviaemail"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/sendviaEmailCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendviaemail" 
                android:textColor="@android:color/black"/>
                
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/adresses" />

            <EditText
                android:id="@+id/emailadresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"  />
            
            <TextView
                android:id="@+id/textView8xx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9955"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceMedium" />
                        
        </LinearLayout>
    </ScrollView>




</LinearLayout>